--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   "bugs": {
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   }, 
-  "dependencies": {
-  "simplelightbox": "^2.1.0"
-},
+
 "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
